--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,18 @@
     .active {
         @apply text-white
     }
+    .heading {
+        @apply text-center text-6xl font-bold tracking-wide pt-10 pb-7
+    }
+    .tagline {
+        @apply text-center text-xl mx-44
+    }
+    .tab {
+        @apply text-xl bg-transparent duration-700 border-r-2 border-b border-b-white/50 border-white/50 py-3 px-32
+    }
+    .active-tab {
+        @apply bg-pink-700 duration-1000
+    }
 }
 
 body::-webkit-scrollbar {
