--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,8 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-.active-tab {
+.active-tab,
+.project-buttons {
     background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
 }
 
